NQE: Set min_requests for throughput computation to 5

Keep min payload size to be 32 KB, but make that a field trial param.

Also, move |use_small_responses_| to the NQE params class.

Bug: 764145	
Change-Id: I8bfd37d602705367d294fff037a47ba72c93f2f7
Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester
Reviewed-on: https://chromium-review.googlesource.com/657202
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501153}
Former-commit-id: fc13d5985a0cd36561f862cc06eb22f97b53d831