net/nqe/network_quality_estimator.cc
@@ -218,7 +218,6 @@ NetworkQualityEstimator::NetworkQualityEstimator(
     NetLog* net_log)
     : params_(std::move(params)),
       use_localhost_requests_(false),
-      use_small_responses_(false),
       disable_offline_check_(false),
       add_default_platform_observations_(true),
       tick_clock_(new base::DefaultTickClock()),
@@ -677,8 +676,7 @@ void NetworkQualityEstimator::SetUseLocalHostRequestsForTesting(
 void NetworkQualityEstimator::SetUseSmallResponsesForTesting(
     bool use_small_responses) {
   DCHECK(thread_checker_.CalledOnValidThread());
-  use_small_responses_ = use_small_responses;
-  throughput_analyzer_->SetUseSmallResponsesForTesting(use_small_responses_);
+  params_->SetUseSmallResponsesForTesting(use_small_responses);
 }
 
 void NetworkQualityEstimator::DisableOfflineCheckForTesting(
